# gtk-layer-shell-gir

./: .gitignore  .gitmodules  Cargo.toml  GtkLayerShell-0.1.gir  LICENSE.txt  README.md
.github/: dependabot.yaml
.github/actions/build_test_commit/: action.yaml
.github/actions/install_deps/: action.yaml
.github/workflows/: build_aarch64.yaml  build_example.yaml  build_x86.yaml  build_x86_64.yaml  check_code.yaml  check_for_major_version.yaml  check_md_links.yaml  publish.yaml  publish_sys.yaml  publish_wrapper.yaml  security_audit.yml  update.yaml  update_gir.yaml  update_gir_files.yaml
.github/workflows/composite/build_test_commit/: action.yaml
.github/workflows/composite/install_deps/: action.yaml
.github/workflows/composite/test_composite_action/: action.yaml
gtk-layer-shell/: Cargo.toml  Gir.toml  README.md  build.rs
gtk-layer-shell-sys/: Cargo.toml  Gir.toml  README.md  build.rs
gtk-layer-shell-sys/src/: lib.rs
gtk-layer-shell-sys/src/auto/: versions.txt
gtk-layer-shell-sys/tests/: abi.rs  constant.c  layout.c
gtk-layer-shell/examples/: simple-example.rs
gtk-layer-shell/gtk-layer-shell-sys/: Cargo.toml  Gir.toml  README.md  build.rs
gtk-layer-shell/gtk-layer-shell-sys/src/: lib.rs
gtk-layer-shell/gtk-layer-shell-sys/tests/: abi.rs  constant.c  layout.c
gtk-layer-shell/src/: lib.rs  manual.rs
gtk-layer-shell/src/auto/: enums.rs  functions.rs  mod.rs  versions.txt
