[workspace]
members = ["gtk-layer-shell", "gtk-layer-shell-sys"]
exclude = ["gir"]
resolver = "2"

[workspace.package]
authors = ["pentamassiv <pentamassiv@posteo.de>"]
rust-version = "1.70"
edition = "2021"
license = "MIT"

[workspace.dependencies]
system-deps = "7"
libc = "0.2"
bitflags = "2"
glib = "0.20"
glib-sys = "0.20"
gdk = { version = "0.18", features = ["v3_24"] }
gdk-sys = "0.18"
gtk-sys = "0.18"
gtk = "0.18"
gio = "0.20"
shell-words = "1.0"
tempfile = "3"
gtk-layer-shell-sys = { path = "gtk-layer-shell-sys", version = "0.7" }
