[package]
name = "gtk-layer-shell-sys"
version = "0.4.1"
authors = ["pentamassiv <pentamassiv@posteo.de>"]
license = "MIT"
description = "Unsave gir-generated FFI bindings for gtk-layer-shell"
repository = "https://github.com/pentamassiv/gtk-layer-shell-gir/tree/main/gtk-layer-shell-sys"
documentation = "https://docs.rs/gtk-layer-shell-sys/"
keywords = ["gtk", "gtk-layer-shell", "wayland", "FFI", "unsafe"]
categories = ["external-ffi-bindings", "gui"]
edition = "2021"
build = "build.rs"
[package.metadata.system-deps.gtk_layer_shell_0]
name = "gtk-layer-shell-0"
version = "0.1"

[package.metadata.system-deps.gtk_layer_shell_0.v0_4]
version = "0.4"

[package.metadata.system-deps.gtk_layer_shell_0.v0_5]
version = "0.5"

[package.metadata.system-deps.gtk_layer_shell_0.v0_6]
version = "0.6"
[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "gtk_layer_shell_sys"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
version = "0.15.10"

[dependencies.gdk]
package = "gdk-sys"
version = "0.15.1"

[dependencies.gtk]
package = "gtk-sys"
version = "0.15.3"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v0_4 = []
v0_5 = ["v0_4"]
v0_6 = ["v0_5"]
default = []
dox = []
